# arcadia-Fe55-sim

./: .gitignore  CMakeLists.txt  back_fit.txt  front.root  front_fit.txt  main.cpp
include/: CommandLine.h  Matrix.h  Pixel.h  Random.h  Simulation.h
results/: log.txt
src/: CommandLine.cpp  Matrix.cpp  Pixel.cpp  Random.cpp  Simulation.cpp
test/: CommandLine.cpp  CommandLine.h  Matrix.cpp  Matrix.h  Pixel.cpp  Pixel.h  Simulation.cpp  Simulation.h  main  main.cpp
